@@ -66,8 +66,7 @@ public interface IRODSAccessObjectFactory {
 	 * with iRODS Users.
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.UserAO}
 	 * @throws JargonException
 	 */
@@ -78,8 +77,7 @@ public interface IRODSAccessObjectFactory {
 	 * retrieve global information from iRODS.
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.EnvironmentalInfoAO}
 	 * @throws JargonException
 	 */
@@ -91,8 +89,7 @@ public interface IRODSAccessObjectFactory {
 	 * to interact with iRODS GenQuery.
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.IRODSGenQueryExecutor}
 	 * @throws JargonException
 	 */
@@ -104,8 +101,7 @@ public interface IRODSAccessObjectFactory {
 	 * with iRODS Zones.
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.ZoneAO}
 	 * @throws JargonException
 	 */
@@ -116,8 +112,7 @@ public interface IRODSAccessObjectFactory {
 	 * with iRODS Resources.
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.ResourceAO}
 	 * @throws JargonException
 	 */
@@ -130,8 +125,7 @@ public interface IRODSAccessObjectFactory {
 	 * {@link org.irods.jargon.core.pub.io.IRODSFile} should be utilized.
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.IRODSFileSystemAO}
 	 * @throws JargonException
 	 */
@@ -143,8 +137,7 @@ public interface IRODSAccessObjectFactory {
 	 * various types of iRODS files and streams.
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.io.IRODSFileFactory}
 	 * @throws JargonException
 	 */
@@ -156,8 +149,7 @@ public interface IRODSAccessObjectFactory {
 	 * interact with iRODS UserGroups.
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.UserGroupAO}
 	 * @throws JargonException
 	 */
@@ -176,8 +168,7 @@ public interface IRODSAccessObjectFactory {
 	 * Collection objects
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.CollectionAO}
 	 * @throws JargonException
 	 */
@@ -189,8 +180,7 @@ public interface IRODSAccessObjectFactory {
 	 * data objects (files)
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.DataObjectAO}
 	 * @throws JargonException
 	 */
@@ -204,8 +194,7 @@ public interface IRODSAccessObjectFactory {
 	 * and list methods in the access objects for DataObject and Collection.
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.CollectionAO}
 	 * @throws JargonException
 	 */
@@ -217,8 +206,7 @@ public interface IRODSAccessObjectFactory {
 	 * with iRODS rule processing
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.RuleProcessingAO}
 	 * @throws JargonException
 	 */
@@ -230,8 +218,7 @@ public interface IRODSAccessObjectFactory {
 	 * centralized set of methods for moving data around the iRODS system.
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.DataTransferOperations}
 	 * @throws JargonException
 	 */
@@ -243,8 +230,7 @@ public interface IRODSAccessObjectFactory {
 	 * commands (scripts) remotely on an iRODS server.
 	 * 
 	 * @param irodsAccount
-	 *            <code>IRODSAccount</code> that describes the irods instance to
-	 *            access.
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link org.irods.jargon.core.pub.RemoteExecutionOfCommandsAO}
 	 * @throws JargonException
 	 */
@@ -255,6 +241,7 @@ public interface IRODSAccessObjectFactory {
 	 * Close the underlying connection for the given IRODSAccount.
 	 * 
 	 * @param irodsAccount
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @throws JargonException
 	 */
 	void closeSession(IRODSAccount irodsAccount) throws JargonException;
@@ -280,6 +267,7 @@ public interface IRODSAccessObjectFactory {
 	 * and extraction of compressed file archives (tars) in iRODS.
 	 * 
 	 * @param irodsAccount
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link BulkFileOperationsAO}
 	 * @throws JargonException
 	 */
@@ -290,6 +278,7 @@ public interface IRODSAccessObjectFactory {
 	 * Get the access object that can manage quota information and settings.
 	 * 
 	 * @param irodsAccount
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link QuotaAO} instance
 	 * @throws JargonException
 	 */
@@ -302,6 +291,7 @@ public interface IRODSAccessObjectFactory {
 	 * various admin functions, and require admin rights.
 	 * 
 	 * @param irodsAccount
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link SimpleQueryExecutorAO} to send and process results of a
 	 *         simple query.
 	 * @throws JargonException
@@ -316,6 +306,7 @@ public interface IRODSAccessObjectFactory {
 	 * retrieval only mode when GenQuery is not expressive enough.
 	 * 
 	 * @param irodsAccount
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link SpecificQueryExcecutorAO} to send and process results of a
 	 *         simple query.
 	 * @throws JargonException
@@ -343,6 +334,7 @@ public interface IRODSAccessObjectFactory {
 	 * stream copies into iRODS.
 	 * 
 	 * @param irodsAccount
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link Stream2StreamAO}
 	 * @throws JargonException
 	 */
@@ -361,6 +353,7 @@ public interface IRODSAccessObjectFactory {
 	 * Get an AO to query audit trail info for a data object
 	 * 
 	 * @param irodsAccount
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link DataObjectAuditAO}
 	 * @throws JargonException
 	 */
@@ -371,6 +364,7 @@ public interface IRODSAccessObjectFactory {
 	 * Get an AO to query audit trail info for a collection
 	 * 
 	 * @param irodsAccount
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
 	 * @return {@link CollectionAuditAO}
 	 * @throws JargonException
 	 */
@@ -386,6 +380,20 @@ public interface IRODSAccessObjectFactory {
 	 * @throws JargonException
 	 */
 	TransferControlBlock buildDefaultTransferControlBlockBasedOnJargonProperties()
+			throws JargonException;
+
+	/**
+	 * Get an AO that allows extension of jargon core libraries by other
+	 * packages that need to directly invoke and process packing instructions
+	 * and other protocol operations.
+	 * 
+	 * @param irodsAccount
+	 *            {@link IRODSAccount} that describes the connection to iRODS.
+	 * @return {@link ProtocolExtensionPoint} that may be used to communicate
+	 *         with iRODS using packing instructions.
+	 * @throws JargonException
+	 */
+	ProtocolExtensionPoint getProtocolExtensionPoint(IRODSAccount irodsAccount)
 			throws JargonException;
 
 }
