@@ -1,0 +1,49 @@
+package org.irods.jargon.core.pub;
+
+import java.util.Properties;
+
+import junit.framework.TestCase;
+
+import org.irods.jargon.core.connection.IRODSAccount;
+import org.irods.jargon.testutils.TestingPropertiesHelper;
+import org.junit.AfterClass;
+import org.junit.BeforeClass;
+import org.junit.Test;
+
+public class ProtocolExtensionPointImplTest {
+
+	private static Properties testingProperties = new Properties();
+
+	private static org.irods.jargon.testutils.TestingPropertiesHelper testingPropertiesHelper = new TestingPropertiesHelper();
+
+	private static org.irods.jargon.testutils.filemanip.ScratchFileUtils scratchFileUtils = null;
+
+	public static final String IRODS_TEST_SUBDIR_PATH = "ProtocolExtensionPointImplTest";
+
+	private static IRODSFileSystem irodsFileSystem = null;
+
+	@BeforeClass
+	public static void setUpBeforeClass() throws Exception {
+		org.irods.jargon.testutils.TestingPropertiesHelper testingPropertiesLoader = new TestingPropertiesHelper();
+		testingProperties = testingPropertiesLoader.getTestProperties();
+		irodsFileSystem = IRODSFileSystem.instance();
+	}
+
+	@AfterClass
+	public static void tearDownAfterClass() throws Exception {
+		irodsFileSystem.closeAndEatExceptions();
+	}
+
+
+	@Test
+	public final void testProtocolExtensionPointImpl() throws Exception {
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+		IRODSAccessObjectFactory accessObjectFactory = irodsFileSystem
+				.getIRODSAccessObjectFactory();
+		ProtocolExtensionPoint pep = accessObjectFactory
+				.getProtocolExtensionPoint(irodsAccount);
+		TestCase.assertNotNull("did not get protocolExtensionPoint", pep);
+	}
+
+}
